[tool.poetry]
name = "pyimgurapi"
version = "0.3.1"
description = ""
authors = ["nautics889 <cyberukr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
jinja2 = "^3.1"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
