[tool.poetry]
name = "pyimgurapi"
version = "0.5.0"
description = "A Python SDK for the Imgur API."
authors = ["nautics889 <cyberukr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pyimgurapi" }
]
repository = "https://github.com/nautics889/PyImgurApi"
homepage = "https://github.com/nautics889/PyImgurApi"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
jinja2 = "^3.1"
pre-commit = ">=3.0.0,<4.0.0"
flake8 = "*"
faker = "^18.10.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
